<resources>
  <string name="app_name">SpigotCaseStudy</string>
  <string name="input_url">input url</string>
  <string name="parse">Parse Encoded URL</string>
  <string name="this_is_device_s_info">this is device\'s info</string>
  <string name="encodeString">https%3a%2f%2fm.alltheapps.org%2fget%2fapp%3fuserId%3dB1C92850-8202-44AC-B514-1849569F37B6%26implementationid%3dcl-and-erp%26trafficSource%3derp%26userClass%3d20200101</string>
  <string name="post">Post</string>
  <string name="the_post_is_done">the post is done</string>
  <string name="this_is_placeholder">This is placeholder</string>
  <string name="format">FORMAT</string>
</resources>