<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"

  android:layout_height="match_parent"
  android:paddingStart="10dp"
  android:paddingEnd="10dp"
  tools:context=".MainActivity">

  <Button
    android:id="@+id/parse_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/parse"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/url_input_et" />

  <TextView
    android:id="@+id/device_info_tv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@color/white"
    android:text="@string/this_is_device_s_info"
    android:textColor="@color/black"
    android:textSize="10sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:ignore="SmallSp" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/saved_urls_rv"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/parse_button" />

  <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/url_input_et"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:hint="@string/input_url"
    android:minHeight="50dp"
    android:orientation="horizontal"
    android:text="@string/encodeString"
    android:textSize="11sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/device_info_tv"
    tools:ignore="SmallSp" />
</androidx.constraintlayout.widget.ConstraintLayout>