<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  style="@style/CardView.Light"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="5dp">
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <Button
      android:id="@+id/post"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/post"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/info_tv" />

    <Button
      android:id="@+id/format"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/format"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/info_tv" />
    <TextView
      android:id="@+id/info_tv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/this_is_placeholder"
      android:textColor="@color/black"
      android:textSize="10sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="SmallSp" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>